--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
                       <!------------------------------------resume-------------------------------------------------------->
   <div class="contact-buttons">
                       <br><br> <br>
-  <a href="resume.pdf" download="Lisa_Resume.pdf" class="download-btn">Download My Resume</a>
+  <a href="resume.pdf" download="Alexis_Resume.pdf" class="download-btn">Download My Resume</a>
 </section>
 
 <!-- Email Button -->
